Refactored the Architecture